# Megazord

./: .gitignore  CMakeLists.txt  MyBot.cpp  README.md  run_game.bat
HaliteAI/: HaliteAI.vcxproj  HaliteAI.vcxproj.filters
Megazord/: bateau.cpp  bateau.hpp  bateau_transitions.cpp  bateau_transitions.hpp  fsm.cpp  fsm.hpp  hfsm.cpp  hfsm.hpp  joueur.cpp  joueur.hpp  rules.cpp  rules.hpp  utils.cpp  utils.hpp  wheeloffortune.cpp  wheeloffortune.hpp
